@@ -22,10 +22,17 @@ a		{cursor:pointer; overflow-wrap:break-word; word-wrap:break-word; word-break:b
 .ace-twilight .ace_gutter	{color:#666 !important;}
 
 /*	Menus	*/
-#menubar 				{display:inline-block;}
-#menubar > li 			{display:inline-block; line-height:24px;}
+#menubar, #menutab	 	{display:inline-block;}
+#menutab				{padding:0; margin:0; font-family:sans-serif;}
+#menubar > li,
+#menutab > li  			{display:inline-block; line-height:24px;}
 #menubar > li > ul > li {display:block;}
 
+.menutab_wrap			{background-color:#272727; border-bottom:1px solid #444;}
+.gist_wrap				{width:100%;}
+
+#menutab > li > div		{padding:3px 1em; background-color:#2d2d2f; border:1px solid #444; border-left:0; border-bottom:0; border-radius:0 4px 0 0; color:#999;}
+#menutab > li#menu_doc > div	{border-left:1px solid #444; border-radius:4px 4px 0 0;}
 .ui-widget.ui-widget-content	{border:0; background-color:#272727;}
 .ui-menu .ui-menu-item-wrapper	{padding:3px 1em; display:flex; align-items:center; height:100%;}
 .ui-menu .ui-menu-item-wrapper svg	{margin-left:5px;}
@@ -41,6 +48,7 @@ a.ui-button:active,
 #menu_execute .ui-state-active	{background:#793D20;}
 
 /*	Font styles	*/
-.json-string		{color:#63c156;}
+.json-document		{font-size:14px; line-height:1.25em;}
+.json-string		{color:#87e37a;}
+.json-literal		{color:#949bff; font-weight:400;}
 .cmd .cursor.blink	{color:#aaa; border-left:1px solid #aaa; background-color:black; margin-left:-1px;}
-
