@@ -12,6 +12,18 @@
 	</div>
 </div>
 
+#^menutabs
+<div class="menutab_wrap">
+	<ul id="menutab">
+		<li id="menu_result">
+			<div>Results</div>
+		</li>
+		<li id="menu_doc">
+			<div>Documentation</div>
+		</li>
+	</ul>
+</div>
+
 #^menubar
 <ul id="menubar">
 	<li id="menu_examples">
