@@ -1,6 +1,12 @@
+Development Portal (2021-05-20 shi)
+==============================
+Update dquery json type
+
+
 Development Portal (2021-05-19 shi)
 ==============================
 Update dquery style
+Update link text for dquery
 
 
 Development Portal (2021-05-07 shi)
